--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html,
+body,
+kbd {
+  font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+  -webkit-font-smoothing: "antialiased";
+}
+
+html {
+  font-size: 17px;
+}
+
+aside {
+  height: calc(100vh - 7rem);
+  top: calc(7rem + 4px) !important;
+  padding-left:0!important;
+  width: 20rem!important;
+}
+
+aside > ul {
+    padding:0!important;
+    width: 20rem!important;
+}
+
+aside > ul > li {
+    padding:0!important;
+}
+
+.nextra-nav-container nav {
+  box-sizing: border-box;
+  padding: 0 2.5rem;
+}
+
+.nextra-sidebar-container {
+  box-sizing: border-box;
+  padding-left: 1rem;
+}
+
+.nextra-toc {
+  padding-right: 1rem;
+}
+
+@media (max-width: 640px) {
+  .nextra-nav-container {
+    padding: 0;
+  }
+
+  .nextra-nav-container nav {
+    padding: 0 2rem;
+  }
+
+  aside {
+    top: 0;
+    height: 100%;
+  }
+
+  .nextra-sidebar-container {
+    padding-top: 0;
+  }
+}
+
+.nextra-breadcrumb {
+  display: none !important;
+}
