Minor CSS tweaks

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@ html {
   font-size: 17px;
 }
 
+@media (min-width: 368px) {
 aside {
   height: calc(100vh - 7rem);
   top: calc(7rem + 4px) !important;
@@ -30,6 +31,15 @@ aside > ul > li {
     padding:0!important;
 }
 
+aside > div > div > div >  ul > li > a {
+    padding-top:0.2rem!important;
+    padding-bottom:0.2rem!important;
+}
+
+aside > div > div > div >  ul > li > a > li {
+   gap: 0.1rem!important;
+}
+
 .nextra-nav-container nav {
   box-sizing: border-box;
   padding: 0 2.5rem;
@@ -43,26 +53,22 @@ aside > ul > li {
 .nextra-toc {
   padding-right: 1rem;
 }
+}
 
 @media (max-width: 640px) {
-  .nextra-nav-container {
-    padding: 0;
-  }
+    .nextra-nav-container {
+      padding: 0!important;
+    }
 
-  .nextra-nav-container nav {
-    padding: 0 2rem;
-  }
 
-  aside {
-    top: 0;
-    height: 100%;
-  }
+    aside {
+      padding-top:0!important;
+      width: 100%!important;
 
-  .nextra-sidebar-container {
-    padding-top: 0;
-  }
-}
+    }
 
 .nextra-breadcrumb {
   display: none !important;
+}
+
 }
