more styling fixes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,6 @@ html {
 @media (min-width: 368px) {
 aside {
   height: calc(100vh - 7rem);
-  top: calc(7rem + 4px) !important;
   padding-left:0!important;
   width: 20rem!important;
 }
@@ -40,6 +39,11 @@ aside > div > div > div >  ul > li > a > li {
    gap: 0.1rem!important;
 }
 
+.nextra-scrollbar > div > div > ul > li{
+    margin-top:0!important;
+    margin-bottom:0!important;
+}
+
 .nextra-nav-container nav {
   box-sizing: border-box;
   padding: 0 2.5rem;
@@ -59,8 +63,6 @@ aside > div > div > div >  ul > li > a > li {
     .nextra-nav-container {
       padding: 0!important;
     }
-
-
     aside {
       padding-top:0!important;
       width: 100%!important;
