chore: add icons to root sidebar items

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,3 +77,12 @@ aside > div > div > div >  ul > li > a > li {
 details > div {
     padding: 1rem;
 }
+
+.sidebar-icon {
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    color: inherit;
+    line-height: 1rem;
+    margin-right: 1rem;
+}
