chore: homepage redesign
*chore: add new fonts
*chore: fix Hero image not changing colors on system theme
*chore: add new default font to components
*chore: add animation for arrows on hover

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,15 @@ html {
 .nextra-breadcrumb {
   display: none !important;
 }
+
+:root {
+  --shiki-color-background: red !important;
+}
+
+.dark {
+  --shiki-color-background: pink !important;
+}
+
 @media (min-width: 368px) {
   aside {
     height: calc(100vh - 7rem);
